# vulkan_my_impl

./: CMakeLists.txt  README.md  detect_unix_wsi.sh
shaders/: compile_shaders.sh  triangle.frag  triangle.vert  triangle_vert.spv
src/: CMakeLists.txt  debug.h  eng_log.cpp  eng_log.h  ignore.h  main.cpp  read_file.h  vulkan_core.cpp  vulkan_data_getters.h  vulkan_handle.h  vulkan_handle_control.cpp  vulkan_handle_description.h  vulkan_handle_make_shared.h  vulkan_handle_util.h  vulkan_resource_manager.cpp
